--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/artprofi91/MySQL-Bamazon#readme",
   "dependencies": {
+    "colors": "^1.1.2",
+    "console.table": "^0.9.1",
     "inquirer": "^3.2.3",
     "mysql": "^2.14.1"
   }
